Add endpoint to docs

--- a/docs/content/apis/minibf.mdx
+++ b/docs/content/apis/minibf.mdx
@@ -22,6 +22,7 @@ Dolos provides many, but not all of the Blockfrost endpoints. The following list
 | `/accounts/{stake_address}/registrations`  | Get registrations for a stake address                    |
 | `/accounts/{stake_address}/rewards`        | Get rewards for a stake address                          |
 | `/accounts/{stake_address}/utxos`          | Get UTXOs for a stake address                            |
+| `/addresses/{address}`                     | Get general information for a specific address           |
 | `/addresses/{address}/transactions`        | Get transactions for a specific address                  |
 | `/addresses/{address}/txs`                 | Alias of `/addresses/{address}/transactions`             |
 | `/addresses/{address}/utxos`               | Get UTXOs for a specific address                         |
